# components-kursach-backend

./: .gitignore  Makefile  README.md  app.py  db_kursach_s2.paw  mypy.ini  package-lock.json  package.json  pyproject.toml  serverless.yml  tox.ini
db_kursach_s2/: commands.py  config.py  create_app.py  flaskapp.py
db_kursach_s2/api/: __init__.py  monitor.py  schemas.py
db_kursach_s2/api/act/: __init__.py  schema.py
db_kursach_s2/api/auth/: __init__.py
db_kursach_s2/api/person/: __init__.py  schema.py
db_kursach_s2/db/: __init__.py  fixtures.py
db_kursach_s2/model/: __init__.py  act.py  birth_act.py  death_act.py  marriage_act.py  person.py  user.py
db_kursach_s2/test/: conftest.py  test_app.py  test_auth.py  test_db_seed.py
doc/: Makefile  conf.py
migrations/versions/: 07546bcf6728_person.py  e1e763cb595b_user.py  f707c31fe191_acts.py
